--- a/C1_W2_Lab_2_callbacks.ipynb
+++ b/C1_W2_Lab_2_callbacks.ipynb
@@ -81,8 +81,7 @@
         "    '''\n",
         "\n",
         "    # Check the loss\n",
-        "    if(logs.get('loss') < 0.04):\n",
-        "\n",
+        "    if(logs.get('loss') < 0.04): # if the loss value is too low, the network will train on given number of ephocs\n",
         "      # Stop if threshold is met\n",
         "      print(\"\\nLoss is lower than 0.4 so cancelling training!\")\n",
         "      self.model.stop_training = True\n",
@@ -144,7 +143,7 @@
       "outputs": [],
       "source": [
         "# Train the model with a callback\n",
-        "model.fit(x_train, y_train, epochs=5, callbacks=[callbacks])"
+        "model.fit(x_train, y_train, epochs=5, callbacks=[callbacks])  # if the loss value is too low, the network will train on given number of ephocs"
       ]
     },
     {
